<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".FragEditor"
 >
   <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_padding_24"
    android:gravity="start"
    >
      <EditText
       android:id="@+id/txtTitleAndContent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:minLines="5"
       android:hint="@string/txtTitleAndContent"
       android:importantForAutofill="no"
       android:maxWidth="400dp"
       android:inputType="text|textAutoCorrect|textImeMultiLine|textMultiLine"
       android:gravity="top"
       />
      <TextView
       android:labelFor="@id/spinPriority"
       android:text="@string/spinPriority"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       />
      <!--   android:textColor="?attr/colorAccent"-->
      <Spinner
       android:id="@+id/spinPriority"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:minHeight="48dp"
       android:background="?attr/selectableItemBackground"
       />
      <Button
       android:id="@+id/btnMoreSettings"
       android:text="@string/btnMoreSettings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:minHeight="48dp"
       />
      <CheckBox
       android:id="@+id/chkShowActions"
       android:text="@string/chkShowActions"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="4dp"
       android:minHeight="48dp"
       android:background="?attr/selectableItemBackground"
       />
   </LinearLayout>
</androidx.core.widget.NestedScrollView>